--- a/.github/workflows/genere_indices.yml
+++ b/.github/workflows/genere_indices.yml
@@ -9,7 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Genere indices
+      - name: Create indices.md
         run: |
           cat indice* > indices.md
-          zip -r indices.zip indice*
+          echo " tous les indices sont combiner dans indices.md"
+      - name: Create indices.zip
+        run: |
+          zip indices.zip indice*.md
+          echo " tous les indices sont combiner dans indices.zip"
