--- a/.github/workflows/compressezip.yml
+++ b/.github/workflows/compressezip.yml
@@ -13,14 +13,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: generer indices.md
       run: |
-        apt-get update
-        apt-get install zip
         zip -r indices.zip ${GITHUB_WORKSPACE}/indices/*.md
         
     - name: Push
       run: |   
         git config --global user.name "bilalm78"
         git config --global user.email "mennitibilal8@gmail.com"
-        git add indices.md
+        git add indices.zip
         git commit -m "Ajout des fichiers compresser  fixes #16 "
         git push
